Fixed up the broken layout a bit.

--- a/css/style.css
+++ b/css/style.css
@@ -264,6 +264,15 @@ input[readonly], input[readonly="readonly"], input[readonly="true"] {
 	font-family: arial;
 }
 
+#key4ce_ticket_menu0 {
+	display: table-cell;
+	width: 50px;
+	margin: 10px 0px 10px 15px;
+	padding: 10px;
+	border-top:2px solid #d6d5d5;
+	border-bottom:1px solid #d6d5d5;
+
+}
 #key4ce_ticket_menu1 {
 	display: table-cell;
 	width: 10%;
@@ -322,6 +331,13 @@ input[readonly], input[readonly="readonly"], input[readonly="true"] {
 	margin: 0px;
 	width: 100%;
 	font-family: arial;
+}
+
+#key4ce_ticket_list0 {
+	width: 50px;
+	padding: 10px;
+	display: table-cell;
+	border-bottom:1px solid #e0e0e0;
 }
 
 #key4ce_ticket_list1 {
